syntax = "proto3";

package com.example.push;

option java_multiple_files = true; // 預設行為會將所有產出的class包在一個class中，設置true後，各個class會被分為獨立檔案

service PushService {
  rpc chatRoomStream(ChatRoomStreamRequest) returns (stream ChatRoomStreamReply);
  rpc closeChatRoom(CloseChatRoomRequest) returns (CloseChatRoomReply);
  rpc unsubscribeStream(UnsubscribeStreamRequest) returns (UnsubscribeStreamReply);
}

message PushMessage {
  string id = 1;
  string chatroomID = 2;
  string username = 3;
  string content = 4;
  int64 createTime = 5;
}


message ChatRoomStreamRequest {
  string chatroomID = 1;
  string username = 2;
}

message ChatRoomStreamReply {
  PushMessage message = 1;
}


message Success {
  bool isSuccess = 1;
}


message CloseChatRoomRequest {
  string chatroomID = 2;
}

message CloseChatRoomReply {
  Success success = 1;
}


message UnsubscribeStreamRequest {
  string username = 1;
  string chatroomID = 2;
}

message UnsubscribeStreamReply {
  Success success = 1;
}